# translation-cli

./: .gitignore  Cargo.toml  README.md  monolith编码风格.md  编码规范.md
examples/: test_core_functionality.rs
src/: api_constants.rs  config.rs  error.rs  html_processor.rs  lib.rs  main.rs  stats.rs  temp_manager.rs  translator.rs  utils.rs  web_crawler.rs
tests/: integration_test.sh
