[package]
name = "translation-cli"
version = "0.1.0"
edition = "2021"
description = "独立的高性能命令行HTML翻译工具，使用内置索引翻译技术"
authors = ["Claude <noreply@anthropic.com>"]

[dependencies]
# html-translation-lib依赖已移除，使用内置的索引翻译模式

# CLI构建
clap = { version = "4.0", features = ["derive"] }

# 异步运行时
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# HTTP客户端
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"

# HTML处理
html5ever = "0.35"
markup5ever_rcdom = "0.35.0-unofficial"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 错误处理
anyhow = "1.0"

# 文本处理
regex = "1.0"
base64 = "0.21"

# 文件操作
walkdir = "2.0"
